--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ uploads/
 backend/src/main/resources/application-local.properties
 backend/src/main/resources/application.properties
 
+node_modules
+
